[package]
name = "mvnx"
version = "1.0.7"
edition = "2021"
description = "A clean and readable Maven wrapper for multi-module projects"
license = "MIT"
authors = ["Leif L Jantzen <ljantzen@gmail.com>"]
repository = "https://github.com/ljantzen/mvnx"
homepage = "https://github.com/ljantzen/mvnx"
documentation = "https://docs.rs/mvnx"
keywords = ["maven", "wrapper", "build", "cli"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
regex = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
